--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <section>
         <div id="title">
-          <h1>Fufu</h1>
+          <h1>hayatepfufu</h1>
           <p>jdlsf</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/hayatep14">hayatep14</a></span>
