--- a/fufu.html
+++ b/fufu.html
@@ -18,5 +18,6 @@ fufu_Hsu
 <body>
 您所要在瀏覽器顯示的內容
 <img src="zz.jpg">
+   <a name="https://hayatep14.github.io/fufu/p2.html">這是P2</a>
 </body>
 </html>
